--- a/html/Buscar.html
+++ b/html/Buscar.html
@@ -17,15 +17,14 @@
 <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
-        <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="30" class="d-inline-block align-text-center">
-        BuscaPsic
-    </a>
+        <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
+        <h3>BuscaPsic</h3>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
         </li>
@@ -36,6 +35,9 @@
             <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="./html/Buscar.html">Buscar</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
         </li>
         </ul>
@@ -43,14 +45,19 @@
         </div>
         </nav>
 <!--Banner-->
+    <div class="conteiner-fluid">
+        <div class="row">
+            <div class="col">
         <nav class="navbar navbar-light mt-2" id="banner">
             <div class="container-fluid p-4" id="banner-text">
-            <h3 class="navbar-text">
+            <h1 class="navbar-text">
                 Busca con nosotros <i class='bx bx-search-alt bx-rotate-90' ></i>
-            </h3>
-            
+            </h1>
             </div>
         </nav>
+    </div>
+    </div>
+    </div>
 <!--Contenido y barra de filtros-->
 <div class="row">
 <div class="buscadorlateral col-4 m-3">
