--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <nav class="navbar navbar-expand-lg" id="navbar" >
       <div class="container-fluid">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
-          <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="30" class="d-inline-block align-text-center">
-          BuscaPsic
-        </a>
+          <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
+          <h3>BuscaPsic</h3>
+        
     
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="../Pre-entrega2-DovidioFrancisco/html/orientacion.html">Orientacion</a>
             </li>
@@ -89,8 +89,8 @@
 </div>
 
 <!--Pie de pagina-->
-<div class="conteiner-fluid">
-            <div class="row p-2">
+<div class="conteiner-fluid" >
+            <div class="row p-2" id="pie-conteiner" >
               <div class="col">
               <section class="pie-de-pagina">
                   <ul>
