--- a/html/Buscar.html
+++ b/html/Buscar.html
@@ -59,32 +59,34 @@
     </div>
     </div>
 <!--Contenido y barra de filtros-->
+<div class="conteiner-fluid">
 <div class="row">
 <div class="buscadorlateral col-4 m-3">
-<div class="mb-3" >
+    <form>
+    <div class="mb-3">
     <label for="InputNombre" class="form-label">Nombre</label>
-    <input type="text" class="form-control" id="InputNombre" aria-describedby="nombreHelp"></div></li>
-    <li><div class="mb-3">
+    <input type="text" class="form-control" id="InputNombre" aria-describedby="nombreHelp">
+    </div>
+    <div class="mb-3">
     <label for="InputApellido" class="form-label">Apellido</label>
     <input type="text" class="form-control" id="InputPassword">
-    </div></li>
-    <li>      <div class="mb-3">
+    </div>
+    <div class="mb-3">
     <label for="InputUbicacion" class="form-label">Ubicacion</label>
     <input type="text" class="form-control" id="InputUbicacion">
     </div>
-    </li>
-    <li><div class="mb-3">
+    <div class="mb-3">
     <label for="InputEdad" class="form-label">Edad (paciente)</label>
     <input type="text" class="form-control" id="InputEdad">
-    </div></li>
-    <li><div class="mb-3">
+    </div>
+    <div class="mb-3">
     <h6>Orientacion</h6>
     <select class="form-select">
     <option value="1">Psicoanalitica</option>
     <option value="2">TCC</option>
     </select>
-    </div></li>
-    <li>    <div class="mb-3">
+    </div>
+    <div class="mb-3">
     <h6>Obra Social</h6>
     <select class="form-select">
     <option value="1">Osde</option>
@@ -93,21 +95,21 @@
     <option value="2">Ospe</option>
     </select>
 </div>
-</li>
-<li> <div class="mb-3">
+<div class="mb-3">
 <h6>Aranceles</h6>
 <label for="InputDesde" class="form-label">Desde</label>
 <input type="text" class="form-control" id="InputDesde">
 <label for="InputHasta" class="form-label">Hasta</label>
 <input type="text" class="form-control" id="InputHasta">
 </div>
-<li><div class="mb-3">
+<div class="mb-3">
     <button type="button" class="btn btn-primary btn-sm">Buscar</button>
     <button type="button" class="btn btn-secondary btn-sm">Reset</button>
-</div></li>
+</div>
+</form>
 </div>
 </div>
-
+</div>
 <!--Pie de pagina-->
 <div class="conteiner-fluid">
 <div class="row p-2" id="pie-conteiner">
