--- a/html/orientacion.html
+++ b/html/orientacion.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
         <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
-        <h3>BuscaPsic</h3>
+        <a class="navbar-brand" href="../index.html"><h3>BuscaPsic</h3></a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
             <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./Buscar.html">Buscar</a>
+        <a class="nav-link" href="./Buscar.html">Buscar</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
@@ -52,7 +52,7 @@
     </div>
 
     <!--Tarjetas-->
-    <class= class="conteiner-fluid">
+    <div class="conteiner-fluid">
     <div class="row">
     <div class="col-md m-2">
     <div class="card" id="Psicotarjeta">
@@ -60,7 +60,7 @@
         <img src="../multimedia/representacion-del-inconsciente-durante-una-terapia-psicoanalitica.jpg"  alt="">
     </div>
     <div class="card-body">
-      <p class="card-text text-center fs-4">Psicoanalitica</p>
+    <p class="card-text text-center fs-4">Psicoanalitica</p>
     </div>
     <div class="infopsic">
         <p>La terapia psicoanalítica se plantea como una terapia a largo plazo que pretende conseguir una reestructuración profunda y duradera de la psique del paciente, mediante modificaciones relevantes de la personalidad y las emociones de la persona, para mejorar su autoconocimiento y calidad de vida.
@@ -70,13 +70,13 @@
     </div>
     </div>
     </div>
-  <div class="col-md m-2">
+    <div class="col-md m-2">
     <div class="card" id="cognitarjeta">
     <div class="portadacogni">
         <img src="../multimedia/Cognitive_behavioral_therapy_-_basic_tenets.svg.png"  alt="">
     </div>
     <div class="card-body">
-      <p class="card-text text-center fs-4">Cognitivo - Conductual</p>
+    <p class="card-text text-center fs-4">Cognitivo - Conductual</p>
     </div>
     <div class="infocogni">
         <p>
@@ -85,13 +85,14 @@
         </p>
         </div>
     </div>
-  </div>
+    </div>
 </div>
+    </div>
 
 
 <!--Pie de pagina-->
 <div class="conteiner-fluid" >
-  <div class="row p-2" id="pie-conteiner" >
+    <div class="row p-2" id="pie-conteiner" >
     <div class="col">
     <section class="pie-de-pagina">
         <ul>
@@ -103,7 +104,7 @@
     </section>
 </div>
 <div class="col-5" id="">
-  <img src="../multimedia/índice.png" class="rounded float-end p-3 m-2" id="imagen-pie" alt="...">
+    <img src="../multimedia/índice.png" class="rounded float-end p-3 m-2" id="imagen-pie" alt="...">
 </div>
 </div>
 </div>
