--- a/html/Buscar.html
+++ b/html/Buscar.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
         <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
-        <h3>BuscaPsic</h3>
+        <a class="navbar-brand" href="../index.html"><h3>BuscaPsic</h3></a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
             <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./html/Buscar.html">Buscar</a>
+            <a class="nav-link" href="./Buscar.html">Buscar</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
