--- a/html/contacto.html
+++ b/html/contacto.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
         <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
-        <h3>BuscaPsic</h3>
+        <a class="navbar-brand" href="../index.html"><h3>BuscaPsic</h3></a>
         
     
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,16 +28,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link" href="../Pre-entrega2-DovidioFrancisco/html/orientacion.html">Orientacion</a>
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./html/contacto.html">Contacto</a>
+            <a class="nav-link" href="./orientacion.html">Orientacion</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./html/Buscar.html">Buscar</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./html/ingresg.html">Ingresar/Registrarse</a>
+            <a class="nav-link" href="./Buscar.html">Buscar</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
             </li>
             </ul>
                 </div>
