--- a/html/ingresg.html
+++ b/html/ingresg.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="./html/Buscar.html">Buscar</a>
+            <a class="nav-link" href="./Buscar.html">Buscar</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./ingresg.html">Ingresar/Registrarse</a>
