--- a/html/orientacion.html
+++ b/html/orientacion.html
@@ -44,13 +44,18 @@
         </div>
         </div>
         </nav>
-    <div class="Introduccion">
+        <div class="conteiner-fluid">
+            <div class="row">
+                <div class="col">
+        <div class="Introduccion">
         <span>Orientacion</span>
         <p> Por regla general se tiene una idea preconcebida de lo que constituye la práctica psicológica, normalmente sacada de la cultura popular, el típico psicólogo de serie de televisión, o el clásico profesional escuchando circunspecto a un paciente recostado en un diván... sin embargo la realidad de la práctica psicológica dista mucho de estos estereotipos.
         Existe un gran número de terapias psicológicas capaces de ayudar a las personas ante sus problemáticas, y los psicólogos normalmente emplean varias disciplinas a la vez, aunque también pueden centrarse en un único enfoque terapeútico, depende del profesional.
         </p>
     </div>
-
+</div>
+</div>
+</div>
     <!--Tarjetas-->
     <div class="conteiner-fluid">
     <div class="row">
@@ -59,8 +64,8 @@
         <div class="portadapsic">
         <img src="../multimedia/representacion-del-inconsciente-durante-una-terapia-psicoanalitica.jpg"  alt="">
     </div>
-    <div class="card-body">
-    <p class="card-text text-center fs-4">Psicoanalitica</p>
+    <div >
+    <p class=" card-text text-center fs-4">Psicoanalitica</p>
     </div>
     <div class="infopsic">
         <p>La terapia psicoanalítica se plantea como una terapia a largo plazo que pretende conseguir una reestructuración profunda y duradera de la psique del paciente, mediante modificaciones relevantes de la personalidad y las emociones de la persona, para mejorar su autoconocimiento y calidad de vida.
@@ -75,7 +80,7 @@
     <div class="portadacogni">
         <img src="../multimedia/Cognitive_behavioral_therapy_-_basic_tenets.svg.png"  alt="">
     </div>
-    <div class="card-body">
+    <div>
     <p class="card-text text-center fs-4">Cognitivo - Conductual</p>
     </div>
     <div class="infocogni">
