--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!--Barra de navegacion-->
 <div class="conteiner-fluid">
   <div class="row">
+    <div class="col">
     <nav class="navbar navbar-expand-lg" id="navbar" >
       <div class="container-fluid">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
@@ -48,9 +49,11 @@
             </nav>
           </div>
         </div>
+        </div>
 <!--Card-->
 <div class="conteiner-fluid">
   <div class="row">
+    <div class="col">
 <div class="card text-center mb-2 mt-2 " id="card">
   <div class="card-body">
     <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="">
@@ -60,10 +63,12 @@
 </div>
   </div>
 </div>
+</div>
 
 <!--Carousel-->
 <div class="conteiner-fluid">
   <div class="row">
+    <div class="col">
             <div id="carouselExampleInterval" class="carousel slide m-1" data-bs-ride="carousel" >
               <div class="carousel-inner  ">
                 <div class="carousel-item" data-bs-interval="3000" id="carrusel-item">
@@ -90,6 +95,7 @@
             </div>
   </div>
 </div>
+</div>
 
 <!--Pie de pagina-->
 <div class="conteiner-fluid" >
@@ -109,7 +115,8 @@
         </div>
         </div>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
 </html>
