modif pie de pagina

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
 <!--Pie de pagina-->
 <div class="conteiner-fluid" >
-            <div class="row p-2" id="pie-conteiner" >
-              <div class="col">
+            <div class="row" id="pie-conteiner" >
+              <div class="col-md-4">
               <section class="pie-de-pagina">
                   <ul>
                       <li><a href="">- Cookies</a></li>
@@ -108,10 +108,17 @@
                       <li><a href="">- Politica de privacidad</a></li>
                       <li><a href="./index.html">- Inicio</a></li>
                       </ul>
+                      <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
               </section>
           </div>
-          <div class="col-5" id="">
-            <img src="../multimedia/índice.png" class="rounded float-end p-3 m-2" id="imagen-pie" alt="...">
+          <div class="col-md-4 ps-3 pt-2 fs-1">
+            <i class='bx bxl-twitter' style='color:#fffcfb' ></i>
+            <i class='bx bxl-facebook-square' style='color:#fffcfb' ></i>
+            <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
+          </div>
+          <div class="col-md-4" id="">
+            <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="...">
+            
         </div>
         </div>
 </div>
