--- a/html/contacto.html
+++ b/html/contacto.html
@@ -15,6 +15,7 @@
 <!--Barra de navegacion-->
 <div class="conteiner-fluid">
 <div class="row">
+    <div class="col">
     <nav class="navbar navbar-expand-lg" id="navbar" >
     <div class="container-fluid">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
@@ -48,6 +49,7 @@
             </nav>
         </div>
         </div>
+</div>
 
 <!--Banner-->
 <div class="conteiner-fluid">
@@ -66,7 +68,7 @@
 <!--Form-->
 <div class="conteiner-fluid">
     <div class="row">
-        <div class="col p-2" id="contacto">
+        <div class="col-md p-2" id="contacto">
             <form>
         <div class="mb-3">
                 <label for="InputEmail" class="form-label fs-4">Email</label>
@@ -92,24 +94,32 @@
         </div>
         </div>
     </div>
-<!--Pie de pagina-->
-<div class="conteiner-fluid">
-    <div class="row p-2" id="pie-conteiner">
-        <div class="col">
-        <section class="pie-de-pagina">
-            <ul>
-                <li><a href="">- Cookies</a></li>
-                <li><a href="">- Creditos</a></li>
-                <li><a href="">- Politica de privacidad</a></li>
-                <li><a href="./index.html">- Inicio</a></li>
-                </ul>
-        </section>
-        </div>
-        <div class="col-5" id="">
-            <img src="../multimedia/índice.png" class="rounded float-end p-3 m-2" id="imagen-pie" alt="...">
-        </div>
-    </div>
-    </div>
+
+    <!--Pie de pagina-->
+<div class="conteiner-fluid" >
+    <div class="row" id="pie-conteiner" >
+    <div class="col-md-4">
+    <section class="pie-de-pagina">
+        <ul>
+            <li><a href="">- Cookies</a></li>
+            <li><a href="">- Creditos</a></li>
+            <li><a href="">- Politica de privacidad</a></li>
+            <li><a href="./index.html">- Inicio</a></li>
+            </ul>
+            <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
+    </section>
+</div>
+<div class="col-md-4 ps-3 pt-2 fs-1">
+    <i class='bx bxl-twitter' style='color:#fffcfb' ></i>
+    <i class='bx bxl-facebook-square' style='color:#fffcfb' ></i>
+    <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
+</div>
+<div class="col-md-4" id="">
+    <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="...">
+    
+</div>
+</div>
+</div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
