--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg" id="navbar" >
       <div class="container-fluid">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
-          <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
+          <img src="./multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
           <a class="navbar-brand" href="../index.html"><h4>BuscaPsic</h4></a>
         
 
@@ -56,7 +56,7 @@
     <div class="col">
 <div class="card text-center mb-2 mt-2 " id="card">
   <div class="card-body">
-    <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="">
+    <img src="./multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="">
     <p class="card-text">Busca tu psicologo adecuado, con filtros utiles y precisos</p>
     <a href="./html/Buscar.html" class="btn btn-secondary">Empezar a buscar</a>
   </div>
