margin de registrar

--- a/html/ingresg.html
+++ b/html/ingresg.html
@@ -74,7 +74,7 @@
         </form>
     </div>
             <div class="col-md m-1" id="registrarse">
-                <form class="form-registrarse p-3">
+                <form class="form-registrarse ms-2 p-3">
                     <h2>Registrarse</h2>
                     <div class="mb-3">
                         <label for="InputNombre" class="form-label">Nombre</label>
