prueba final merge con gitignore

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
     <body>
 
-<!--Barra de navegacion-->>
+<!--Barra de navegacion-->
 <div class="conteiner-fluid">
   <div class="row">
     <div class="col">
