--- a/html/contacto.html
+++ b/html/contacto.html
@@ -55,7 +55,7 @@
 <div class="conteiner-fluid">
     <div class="row">
         <div class="col">
-    <nav class="navbar navbar-light m-1" id="banner">
+    <nav class="navbar navbar-light m-2" id="banner">
         <div class="container-fluid p-4" id="banner-text">
         <h1>
             Contactanos
@@ -68,7 +68,7 @@
 <!--Form-->
 <div class="conteiner-fluid">
     <div class="row">
-        <div class="col-md p-2" id="contacto">
+        <div class="col-md p-2 m-3" id="contacto">
             <form>
         <div class="mb-3">
                 <label for="InputEmail" class="form-label fs-4">Email</label>
