--- a/html/ingresg.html
+++ b/html/ingresg.html
@@ -53,7 +53,7 @@
 
     <!--Tarjetas-->
     <div class="conteiner-fluid">
-    <div class="row ">
+    <div class="row mt-2">
     <div class="col-md m-1 " id="ingresar">
         <form class="form-ingresg ms-2 p-3">
             <h2>Ingresar</h2>
