--- a/html/Buscar.html
+++ b/html/Buscar.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Buscar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../scss/style.css">
 <body>
     
     
@@ -56,7 +56,7 @@
             <div class="col">
         <nav class="navbar navbar-light mt-2" id="banner">
             <div class="container-fluid p-4" id="banner-text">
-            <h1 class="navbar-text">
+            <h1 class="navbar-text text-white">
                 Busca con nosotros <i class='bx bx-search-alt bx-rotate-90' ></i>
             </h1>
             </div>
