--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../scss/style.css">
 
     <body>
 
@@ -56,7 +56,7 @@
     <div class="row">
         <div class="col">
     <nav class="navbar navbar-light m-2" id="banner">
-        <div class="container-fluid p-4" id="banner-text">
+        <div class="container-fluid p-4 text-white" id="banner-text">
         <h1>
             Contactanos
         </h1>
@@ -68,7 +68,7 @@
 <!--Form-->
 <div class="conteiner-fluid">
     <div class="row">
-        <div class="col-md p-2 m-3" id="contacto">
+        <div class="col-md p-2 " id="contacto">
             <form>
         <div class="mb-3">
                 <label for="InputEmail" class="form-label fs-4">Email</label>
