--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,6 +8,9 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../scss/style.css">
 
     <body>
@@ -15,9 +18,9 @@
 <!--Barra de navegacion-->
 <div class="conteiner-fluid">
 <div class="row">
-    <div class="col">
+    <div class="col animate__animated animate__fadeInLeftBig animate__faster">
     <nav class="navbar navbar-expand-lg" id="navbar" >
-    <div class="container-fluid">
+    <div class="container-fluid animate__animated animate__fadeIn animate__slow">
         <a class="navbar-brand" href="../Pre-entrega2-DovidioFrancisco/index.html">
         <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
         <a class="navbar-brand" href="../index.html"><h3>BuscaPsic</h3></a>
@@ -68,7 +71,7 @@
 <!--Form-->
 <div class="conteiner-fluid">
     <div class="row">
-        <div class="col-md p-2 " id="contacto">
+        <div class="col-md p-2 animate__animated animate__fadeIn animate__delay-1s" id="contacto">
             <form>
         <div class="mb-3">
                 <label for="InputEmail" class="form-label fs-4">Email</label>
@@ -97,9 +100,9 @@
 
     <!--Pie de pagina-->
 <div class="conteiner-fluid" >
-    <div class="row" id="pie-conteiner" >
-    <div class="col-md-4">
-    <section class="pie-de-pagina">
+    <div class="row animate__animated animate__fadeIn animate__slower" id="pie-conteiner" >
+    <div class="col-md-4  ">
+    <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
         <ul>
             <li><a href="">- Cookies</a></li>
             <li><a href="">- Creditos</a></li>
@@ -109,12 +112,12 @@
             <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
     </section>
 </div>
-<div class="col-md-4 ps-3 pt-2 fs-1">
+<div class="col-md-4 ps-3 pt-2 fs-1 animate__animated animate__fadeIn animate__delay-1s">
     <i class='bx bxl-twitter' style='color:#fffcfb' ></i>
     <i class='bx bxl-facebook-square' style='color:#fffcfb' ></i>
     <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
 </div>
-<div class="col-md-4" id="">
+<div class="col-md-4 animate__animated animate__fadeIn animate__delay-1s" id="">
     <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="...">
     
 </div>
