--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <nav class="navbar navbar-expand-lg" id="navbar" >
       <div class="container-fluid animate__animated animate__fadeIn animate__slow">
           <a class="navbar-brand" href="./index.html">
-          <img src="../multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logo-de-marca" width="30" height="35" class="d-inline-block align-text-center ms-2"></a>
-          <a class="navbar-brand" href="../index.html"><h2>BuscaPsic</h2></a>
+          <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
+          <a class="navbar-brand" href="./index.html"><h1>BuscaPsic</h1></a>
           
       
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 ">
               <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
@@ -72,8 +72,8 @@
   </nav>
   <div class="card-body">
     <h1 class="text-white display-1">BuscaPsic</h1>
-    <img src="./multimedia/kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1).png" alt="Logodemarca">
-    <p class="card-text">Busca tu psicologo adecuado, con filtros utiles y precisos</p>
+    <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic">
+    <p class="card-text fs-3">Busca tu psicologo adecuado, con filtros utiles y precisos</p>
     <a href="./html/Buscar.html" class="btn btn-secondary">Empezar a buscar</a>
   </div>
 </div>
@@ -113,6 +113,27 @@
 </div>
 </div>
 
+<!--Card-->
+<div class="conteiner-fluid">
+  <div class="row ">
+    <div class="col animate__animated animate__fadeIn animate__slow" id="card-index-quienes">
+<div class="card text-center mb-2 mt-2 " id="card">
+  <div class="quienes-somos card-body">
+    <h1 class="text-white display-1 p-3">Quienes somos?</h1>
+    <p class="quienes-somos-texto card-text fs-3">
+      Desde BuscaPsic nos enfocamos en brindar ayuda a aquellas perosnas en busqueda de un Licenciado en Psicologia, direccionando y optimizando sus requisitos para iniciar una terapia.
+      BuscaPsic es un sitio web apuntado a pacientes, quienes esten en busqueda de terapia psicologica.
+      En nuestra pagina podran encontrar una serie de filtros que le haran su busqueda mas rapida y precisa, para selecionar su terapeuta en nuestra cartilla de mas de 1000 psicologos especializados en distitntos tipos de terapia.
+      Conoce mas sobre los tipos de terapia a las que puedes acudir en nuestra pesta;a de orientaciones.
+      Tambien podras crearte un usuario para llevar registro de tus busquedas y un apartado de consultas, para enviarnos tus dudas.
+
+    </p>
+  </div>
+</div>
+  </div>
+</div>
+</div>
+
     <!--Pie de pagina-->
     <div class="conteiner-fluid" >
       <footer>
@@ -134,7 +155,7 @@
       <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
   </div>
   <div class="col-md-4 animate__animated animate__fadeIn animate__delay-1s" id="">
-      <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="colegio-depsicologos-pba">
+      <img src="./multimedia/LOW JPGíndice.jpg" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="colegio-depsicologos-pba">
   </div>
   </div>
 </footer>
