reemplazo imagen pie

--- a/html/orientacion.html
+++ b/html/orientacion.html
@@ -139,7 +139,7 @@
         <i class='bx bxl-instagram' style='color:#fffcfb' ></i>
     </div>
     <div class="col-md-4 animate__animated animate__fadeIn animate__delay-1s" id="">
-        <img src="../multimedia/LOW-JPGíndice.jpg" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="colegio-depsicologos-pba">
+        <img src="../multimedia/índice.png" class="rounded float-center p-3 mt-2 mb-2" id="imagen-pie" alt="colegio-depsicologos-pba">
         
     </div>
     </div>
