correccion ortografia y agregado de contenido

--- a/html/orientacion.html
+++ b/html/orientacion.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Orientacion</title>
+    <title>Orientación</title>
     <meta name="description" content="BuscaPsic es un buscador para encontrar tu psicologo mediante filtros que hacen de tu busqueda un proceso adaptado a tus necesidades">
     <meta name="keywords" content="BuscaPsic, buscador, buscar, psicologo, analista, analisis, terapia, psicoanalista, cognitivo-conductual, tcc, terapia, busqueda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -26,19 +26,19 @@
         <div class="container-fluid animate__animated animate__fadeIn animate__slow">
             <a class="navbar-brand" href="../index.html">
             <img src="../multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
-            <a class="navbar-brand" href="../index.html"><h1>BuscaPsic</h1></a>
+            <a class="navbar-brand" href="../index.html"><h1 class="fw-light">BuscaPsic</h1></a>
             
         
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 fs-5">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="./orientacion.html">Orientacion</a>
+                <a class="nav-link" href="./orientacion.html">Orientación</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -61,7 +61,7 @@
 <div class="conteiner-fluid">
         <div class="row">
             <div class="col">
-        <div class="Introduccion">
+        <header class="Introduccion">
                   <!--Breadcrumb-->
                   <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                     <ol class="breadcrumb ">
@@ -70,28 +70,28 @@
                       <li class="breadcrumb-item active text-success" aria-current="page">Orientacion</li>
                     </ol>
                     </nav>
-        <h1 class="display-1">Orientacion</h1>
-        <p> Por regla general se tiene una idea preconcebida de lo que constituye la práctica psicológica, normalmente sacada de la cultura popular, el típico psicólogo de serie de televisión, o el clásico profesional escuchando circunspecto a un paciente recostado en un diván... sin embargo la realidad de la práctica psicológica dista mucho de estos estereotipos.
-        Existe un gran número de terapias psicológicas capaces de ayudar a las personas ante sus problemáticas, y los psicólogos normalmente emplean varias disciplinas a la vez, aunque también pueden centrarse en un único enfoque terapeútico, depende del profesional.
+        <h1 class="display-1">Orientación</h1>
+        <p> Por regla general se tiene una idea preconcebida de lo que constituye la práctica psicológica, normalmente sacada de la cultura popular, el típico psicólogo de serie de televisión, o el clásico profesional escuchando circunspecto a un paciente recostado en un diván... sin embargo, la realidad de la práctica psicológica dista mucho de estos estereotipos.
+        Existe un gran número de terapias psicológicas capaces de ayudar a las personas ante sus problemáticas, y los psicólogos normalmente emplean varias disciplinas a la vez, aunque también pueden centrarse en un único enfoque terapéutico, depende del profesional.
         </p>
-    </div>
+    </header>
 </div>
 </div>
 </div>
 
     <!--Tarjetas-->
     <div class="conteiner-fluid">
-    <div class="row">
+    <div class="row p-2">
     <div class="col-md m-1 animate__animated animate__fadeInLeftBig">
     <div class="card" id="Psicotarjeta">
         <div class="portadapsic">
         <img src="../multimedia/representacion-del-inconsciente-durante-una-terapia-psicoanalitica.jpg"  alt="Imagen-tarjeta-psicoanalisis">
     </div>
     <div >
-    <p class=" card-text text-center fs-4">Psicoanalitica</p>
+    <p class="card-text text-center fs-4">Psicoanalitica</p>
     </div>
-    <div class="infopsic">
-        <p class="">La terapia psicoanalítica se plantea como una terapia a largo plazo que pretende conseguir una reestructuración profunda y duradera de la psique del paciente, mediante modificaciones relevantes de la personalidad y las emociones de la persona, para mejorar su autoconocimiento y calidad de vida.
+    <div class="infopsic text-wrap">
+        <p>La terapia psicoanalítica se plantea como una terapia a largo plazo que pretende conseguir una reestructuración profunda y duradera de la psique del paciente, mediante modificaciones relevantes de la personalidad y las emociones de la persona, para mejorar su autoconocimiento y calidad de vida.
             Sigmund Freud animaba a los pacientes a tumbarse en un diván y hablar, con la intención de liberarlos así de sus recuerdos reprimidos y de aliviar su sufrimiento mental. Actualmente, los terapeutas usan el diálogo constante con el paciente y procuran que se sienta cómodo y seguro, para que pueda expresar todo lo que siente mientras el terapeuta escucha con atención. En esta terapia, el habla cobra importancia. 
             El diálogo se vuelve enriquecedor y nutritivo, a medida que el paciente logra tomar conciencia de cuestiones que tenía almacenadas en el inconsciente, relacionándolas con el presente y encontrándoles un sentido.
         </p>
@@ -104,7 +104,7 @@
         <img src="../multimedia/Cognitive_behavioral_therapy_-_basic_tenets.svg.png"  alt="Imagen-tarjeta-cognitivo-conductual">
     </div>
     <div>
-    <p class="card-text text-center fs-4">Cognitivo - Conductual</p>
+        <p class="card-text text-center fs-4">Cognitivo - Conductual</p>
     </div>
     <div class="infocogni">
         <p>
@@ -118,6 +118,23 @@
 </div>
 </div>
 
+<!--Banner-->
+<div class="conteiner-fluid">
+    <div class="row">
+        <div class="col">
+    <section class="Introduccion">
+    <h1 class="display-1">Comparemos</h1>
+    <p>Las principales diferencias entre la terapia cognitivo conductual y el psicoanálisis tomando en cuenta el objeto de estudio, la metodología, la base epistemológica, las unidades de análisis, las teorías del desarrollo, las estructuras de personalidad y las técnicas de intervención.
+        Siempre existe confusión sobre estos dos enfoques y muchos se preguntan si la terapia cognitivo conductual y el psicoanálisis son compatibles. Al finalizar este vídeo sacarás tus propias conclusiones y podrás decidir si quieres formarte en terapia cognitivo conductual o en psicoanálisis.
+    </p>
+</section>
+<div class="d-flex justify-content-center p-2">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6OgyBPXbyhI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
+</div>
+</div>
+</div>
+
     <!--Pie de pagina-->
     <div class="conteiner-fluid" >
         <footer>
@@ -126,8 +143,8 @@
         <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
             <ul>
                 <li><a href="">- Cookies</a></li>
-                <li><a href="">- Creditos</a></li>
-                <li><a href="">- Politica de privacidad</a></li>
+                <li><a href="">- Créditos</a></li>
+                <li><a href="">- Política de privacidad</a></li>
                 <li><a href="./index.html">- Inicio</a></li>
                 </ul>
                 <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
