--- a/index.html
+++ b/index.html
@@ -21,23 +21,21 @@
 <div class="conteiner-fluid">
   <div class="row">
       <div class="col animate__animated animate__fadeInLeftBig animate__faster">
-      <nav class="navbar navbar-expand-lg" id="navbar" >
+      <nav class="navbar navbar-expand-lg " id="navbar" >
       <div class="container-fluid animate__animated animate__fadeIn animate__slow">
           <a class="navbar-brand" href="./index.html">
           <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
-          <a class="navbar-brand" href="./index.html"><h1>BuscaPsic</h1></a>
-          
-      
+          <a class="navbar-brand" href="./index.html"><h1 class="fw-light">BuscaPsic</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon "></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 ">
-              <li class="nav-item">
+          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 fs-5  " id="navbar-items">
+              <li class="nav-item ">
                   <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="./html/orientacion.html">Orientacion</a>
+              <a class="nav-link" href="./html/orientacion.html">Orientación</a>
               </li>
               <li class="nav-item">
               <a class="nav-link" href="./html/contacto.html">Contacto</a>
@@ -73,8 +71,9 @@
   <div class="card-body">
     <h1 class="text-white display-1">BuscaPsic</h1>
     <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic">
-    <p class="card-text fs-3">Busca tu psicologo adecuado, con filtros utiles y precisos</p>
-    <a href="./html/Buscar.html" class="btn btn-secondary">Empezar a buscar</a>
+    <p class="card-text fs-3">Busca tu psicólogo adecuado, con filtros útiles y precisos</p>
+    <a href="./html/Buscar.html" class="btn btn-outline-info">Empezar a buscar</a>
+    <a href="#card-index-quienes" class="btn btn-outline-success">Quienes somos?</a>
   </div>
 </div>
   </div>
@@ -97,7 +96,7 @@
                   <img src="./multimedia/tipos-terapias-psicologicas-wide.jpg" class="d-block w-100" alt="tipos-de-terapia">
                 </div>
                 <div class="carousel-item active " data-bs-interval="5000">
-                  <img src="./multimedia/Home.png" class="d-block w-100" alt="el buscador-mas-completo">
+                  <img src="./multimedia/Home.png" class="d-block w-100" alt="el-buscador-mas-completo">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -121,11 +120,10 @@
   <div class="quienes-somos card-body">
     <h1 class="text-white display-1 p-3">Quienes somos?</h1>
     <p class="quienes-somos-texto card-text fs-3">
-      Desde BuscaPsic nos enfocamos en brindar ayuda a aquellas perosnas en busqueda de un Licenciado en Psicologia, direccionando y optimizando sus requisitos para iniciar una terapia.
-      BuscaPsic es un sitio web apuntado a pacientes, quienes esten en busqueda de terapia psicologica.
-      En nuestra pagina podran encontrar una serie de filtros que le haran su busqueda mas rapida y precisa, para selecionar su terapeuta en nuestra cartilla de mas de 1000 psicologos especializados en distitntos tipos de terapia.
-      Conoce mas sobre los tipos de terapia a las que puedes acudir en nuestra pesta;a de orientaciones.
-      Tambien podras crearte un usuario para llevar registro de tus busquedas y un apartado de consultas, para enviarnos tus dudas.
+      BuscaPsic es un sitio web enfocado a pacientes, donde nos enfocamos en brindar ayuda a aquellas personas en búsqueda de un Licenciado en Psicología, direccionando y optimizando la misma, basándose en sus requisitos para iniciar una terapia.
+      En nuestra página, podrán encontrar una serie de filtros que le harán su búsqueda más rápida y precisa, para seleccionar su terapeuta en nuestra cartilla de más de 1000 psicólogos especializados en distitntos tipos de terapia.
+      Conoce más sobre los tipos de terapia a las que puedes acudir en nuestra pestaña de orientaciones.
+      También podrás crearte un usuario para llevar registro de tus búsquedas y un apartado de consultas, para enviarnos tus dudas.
 
     </p>
   </div>
@@ -142,8 +140,8 @@
       <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
           <ul>
               <li><a href="">- Cookies</a></li>
-              <li><a href="">- Creditos</a></li>
-              <li><a href="">- Politica de privacidad</a></li>
+              <li><a href="">- Créditos</a></li>
+              <li><a href="">- Política de privacidad</a></li>
               <li><a href="./index.html">- Inicio</a></li>
               </ul>
               <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
