--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,19 +25,19 @@
     <div class="container-fluid animate__animated animate__fadeIn animate__slow">
         <a class="navbar-brand" href="../index.html">
         <img src="../multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
-        <a class="navbar-brand" href="../index.html"><h1>BuscaPsic</h1></a>
+        <a class="navbar-brand" href="../index.html"><h1 class="fw-light">BuscaPsic</h1></a>
         
     
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 fs-5">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="./orientacion.html">Orientacion</a>
+            <a class="nav-link" href="./orientacion.html">Orientación</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -61,6 +61,7 @@
 <div class="conteiner-fluid">
     <div class="row">
         <div class="col">
+        <header>
     <nav class="navbar navbar-light" id="banner">
                   <!--Breadcrumb-->
                   <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
@@ -72,18 +73,19 @@
                     </nav>
         <div class="container-fluid p-4 text-white" id="banner-text">
         <h1 class="display-1">
-            Contactanos
+            Contáctanos
         </h1>
         </div>
     </nav>
+</header>
 </div>
 </div>
 </div>
 <!--Form-->
 <div class="conteiner-fluid">
     <div class="row">
-        <div class="col-md p-2 animate__animated animate__fadeIn animate__delay-1s" id="contacto">
-            <form>
+        <div class="col-md p-2 animate__animated animate__fadeIn animate__delay-1s" >
+            <form class="contacto">
         <div class="mb-3">
                 <label for="InputEmail" class="form-label fs-4">Email</label>
                 <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
@@ -93,7 +95,7 @@
                 <input type="date" class="form-control" id="Inputfechadenac" aria-describedby="fechadenacHelp">
         </div>
         <div class="mb-3">
-            <label for="Inputdni" class="form-label fs-4">Numero de documento</label>
+            <label for="Inputdni" class="form-label fs-4">Número de documento</label>
             <input type="text" class="form-control" id="Inputdni" aria-describedby="dniHelp">
         </div>
         <div class="mb-3">
@@ -101,8 +103,8 @@
             <textarea name="consulta" id="consulta" cols="30" rows="10"></textarea>
         </div>
         <div class="mb-3">
-            <button type="button" class="btn btn-primary btn-sm">Enviar</button>
-            <button type="button" class="btn btn-secondary btn-sm">Reset</button>
+            <button type="button" class="btn btn-primary ">Enviar</button>
+            <button type="button" class="btn btn-secondary ">Reset</button>
         </div>
     </form>
         </div>
@@ -117,8 +119,8 @@
     <section class="pie-de-pagina animate__animated animate__fadeIn animate__delay-1s ">
         <ul>
             <li><a href="">- Cookies</a></li>
-            <li><a href="">- Creditos</a></li>
-            <li><a href="">- Politica de privacidad</a></li>
+            <li><a href="">- Créditos</a></li>
+            <li><a href="">- Política de privacidad</a></li>
             <li><a href="./index.html">- Inicio</a></li>
             </ul>
             <p class="fs-6 text-white">Todos los derechos reservados <i class='bx bx-registered'></i></p>
