correccion text y media queri de quienes somos

--- a/index.html
+++ b/index.html
@@ -119,12 +119,11 @@
 <div class="card text-center mb-2 mt-2 " id="card">
   <div class="quienes-somos card-body">
     <h1 class="text-white display-1 p-3">Quienes somos?</h1>
-    <p class="quienes-somos-texto card-text fs-3">
-      BuscaPsic es un sitio web enfocado a pacientes, donde nos enfocamos en brindar ayuda a aquellas personas en búsqueda de un Licenciado en Psicología, direccionando y optimizando la misma, basándose en sus requisitos para iniciar una terapia.
-      En nuestra página, podrán encontrar una serie de filtros que le harán su búsqueda más rápida y precisa, para seleccionar su terapeuta en nuestra cartilla de más de 1000 psicólogos especializados en distitntos tipos de terapia.
+    <p class="quienes-somos-texto card-text ">
+      BuscaPsic es un sitio web enfocado a pacientes, donde se le podra brindar ayuda a aquellas personas en búsqueda de un Licenciado en Psicología, direccionando y optimizando la misma, basándose en sus requisitos para iniciar una terapia.
+      En nuestra página, podrán encontrar una serie de filtros que le permitiran buscar de forma rápida y precisa, para seleccionar su terapeuta en nuestra cartilla de más de 1000 psicólogos especializados en distitntos tipos de terapia.
       Conoce más sobre los tipos de terapia a las que puedes acudir en nuestra pestaña de orientaciones.
       También podrás crearte un usuario para llevar registro de tus búsquedas y un apartado de consultas, para enviarnos tus dudas.
-
     </p>
   </div>
 </div>
