modificaciones en index, navbar, orientacion

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
       <nav class="navbar navbar-expand-lg " id="navbar" >
       <div class="container-fluid animate__animated animate__fadeIn animate__slow">
           <a class="navbar-brand" href="./index.html">
-          <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
+          <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="imagen-logo-navbar mb-2 ms-2"></a>
           <a class="navbar-brand" href="./index.html"><h1 class="fw-light">BuscaPsic</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon "></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 fs-5  " id="navbar-items">
-              <li class="nav-item ">
+          <ul class="navbar-nav ms-1 me-3 fs-5" id="navbar-items">
+              <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
@@ -69,9 +69,12 @@
     </ol>
   </nav>
   <div class="card-body">
+    <section class="marca-logo d-flex justify-content-center align-items-center">
+    <img class="m-4" src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic">
     <h1 class="text-white display-1">BuscaPsic</h1>
-    <img src="./multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic">
-    <p class="card-text fs-3">Busca tu psicólogo adecuado, con filtros útiles y precisos</p>
+  </section>
+    <p class="card-text ">Cuándo ir al psicólogo y comenzar un proceso de psicoterapia es una decisión difícil para la mayor parte de las personas. Probablemente lleves un tiempo sintiéndote mal, pero no sepas si es conveniente para ti acudir y no tienes claro a qué psicólogo elegir. Quizás tengas temor, vergüenza o no sepas muy bien en qué consiste la terapia ni si tu problema es algo que se puede tratar con un psicólogo. Todo esto es normal, ya que pese a los avances, existe aun cierta desinformación y el hecho de acudir al psicólogo sigue siendo un tema tabú en nuestra sociedad cargado de significados negativos. Y es una pena, porque un buen tratamiento psicológico ayuda a muchas personas a resolver su malestar emocional y supone un potente motor de cambio personal.
+                          En <span class="fs-2 text-white fw-light">BuscaPsic</span> podes empezar esta busqueda de profesionales que ayuden a comenzar este preoceso de cambio, con filtros útiles y precisos</p>
     <a href="./html/Buscar.html" class="btn btn-outline-info">Empezar a buscar</a>
     <a href="#card-index-quienes" class="btn btn-outline-success">Quienes somos?</a>
   </div>
