--- a/html/ingresg.html
+++ b/html/ingresg.html
@@ -26,15 +26,13 @@
         <nav class="navbar navbar-expand-lg" id="navbar" >
         <div class="container-fluid animate__animated animate__fadeIn animate__slow">
             <a class="navbar-brand" href="../index.html">
-            <img src="../multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="mb-2 ms-2"></a>
+            <img src="../multimedia/LOW kisspng-psychology-symbol-psychotherapist-semana-da-psicol-psicologa-social-5cc757fa32f1f8.8039736715565680582087(1) 2.png" alt="Logo-de-marca-BuscaPsic" width="45" height="50" class="imagen-logo-navbar mb-2 ms-2"></a>
             <a class="navbar-brand" href="../index.html"><h1 class="fw-light">BuscaPsic</h1></a>
-            
-        
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-1 ms-3 mb-lg-0 fs-5">
+            <ul class="navbar-nav  ms-1 me-3 fs-5">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                 </li>
